--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -95,3 +95,32 @@ p {
     color: $state-danger-text;
   }
 }
+.school_title{
+  color: #fff;
+  &hover,&visited{
+    color: #fff;
+  }
+}
+@media (min-width: 768px){
+  .navbar-nav{
+      margin: 0 auto;
+      display: table;
+      table-layout: fixed;
+      float:none;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .navbar-nav li{
+    padding:0 1em;
+  }
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  .navbar-nav li{
+    padding:0 2em;
+  }
+}
+@media (min-width: 1200px) {
+  .navbar-nav li{
+    padding:0 3em;
+  }
+}
