--- a/app/assets/stylesheets/meetings.scss
+++ b/app/assets/stylesheets/meetings.scss
@@ -36,6 +36,7 @@
 #datepicker-submit {
   text-align: center;
   margin-top: 20px;
+  margin-bottom: 50px;
 }
 
 /* 面談時間登録ページ */
@@ -150,6 +151,7 @@ td.ui-datepicker-week-end a.ui-state-highlight{
 #submit-center {
   text-align: center;
   margin-top: 20px;
+  margin-bottom: 50px;
 }
 
 .submit-width {
