--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -38,14 +38,14 @@
                 <%= fields_for "meeting_times[]", meeting_time do |af| %>
                 <% if meeting_time.name.blank? %>
                   <td>
-                    <% unless meeting_select(@teacher, date, meeting_time).blank? %>
+                    <% unless meeting_select(@teacher, date, meeting_time).empty? %>
                       <%= af.select :name, meeting_select(@teacher, date, meeting_time), include_blank: true, class: "form-control" %>
                     <% end %>
                   </td>
                 <% else %>
                   <td>
                     <%= link_to "#{meeting_time.name}", teacher_schedule_update_path(@teacher, meeting_time_id: meeting_time.id), meeting_time_id: meeting_time.id, method: :patch %>
-                    <% unless meeting_select(@teacher, date, meeting_time).blank? %>
+                    <% unless meeting_select(@teacher, date, meeting_time).empty? %>
                       <%= af.select :name, meeting_select(@teacher, date, meeting_time), include_blank: true, class: "form-control" %>
                     <% end %>
                   </td>
