--- a/app/views/layouts/_header2.html.erb
+++ b/app/views/layouts/_header2.html.erb
@@ -9,7 +9,7 @@
 			</button>
 			<!-- ユーザー、教員、未ログインでタイトル分岐-->
 			<a class="navbar-brand school_title" href="<%= link_check %>">
-			   <span class="title_font" style="font-size:24px;color:#fff"><%= fa_icon("school") %>学校の面談と提出アプリ</span>
+			   <span class="title_font" style="font-size:24px;color:#fff"><%= fa_icon("fa-school") %>学校の面談と提出アプリ</span>
 			</a>
 		</div>
 		<div class="collapse navbar-collapse" id="navbarEexample7">
