--- a/app/views/layouts/_header2.html.erb
+++ b/app/views/layouts/_header2.html.erb
@@ -42,10 +42,10 @@
 				<li class="<%= "active" if active == "index" %>"><%= link_to "提出状況", documents_path(params:{teacher_id: current_teacher}) %></li>
 				<li class="<%= "active" if active == "t_message" %>"><%= link_to "保護者連絡", teacher_t_message_path(current_teacher)  %></li>
 			  <% elsif logged_in? && current_user.children.count >0 %>	
-			    <li class="<%= "active" if active == "show" %>"><%= link_to "トップページ", user_path(@user) %></li>
-				<li class="<%= "active" if active == "new_user" %>"><%= link_to "面談ページへ", user_meetings_new_user_path(user_id: @user.id, child_id: session[:child_id] ) %></li>
-				<li class="<%= "active" if active == "document_show"%>"><%= link_to "提出ページへ",  user_documets_path(@user) %></li>
-				<li class="<%= "active" if active == "messages"%>"><%= link_to "お便り",user_users_messages_path(@user) %></li>
+			    <li class="<%= "active" if active == "show" %>"><%= link_to "トップページ", user_path(current_user) %></li>
+				<li class="<%= "active" if active == "new_user" %>"><%= link_to "面談ページへ", user_meetings_new_user_path(user_id: current_user.id, child_id: session[:child_id] ) %></li>
+				<li class="<%= "active" if active == "document_show"%>"><%= link_to "提出ページへ",  user_documets_path(current_user) %></li>
+				<li class="<%= "active" if active == "messages"%>"><%= link_to "お便り",user_users_messages_path(current_user) %></li>
 			  <% end %>	
 			</ul>
 			
