--- a/app/assets/stylesheets/teachers.scss
+++ b/app/assets/stylesheets/teachers.scss
@@ -43,3 +43,21 @@
   text-align: center;
   margin: auto;
 }
+@media screen and (max-width:767px){
+  #teacher-top{
+   
+    #one,#two,#three,#four,#five{
+      margin-top: 0px;
+      .top-button {
+        width: 100%;
+        height: 45px;
+        
+      }
+    }
+  }
+}
+#teacher_bt{margin-bottom: 5%;height:45px;font-weight:bold;}
+/* teacher-top*/
+.box_srcollbar{
+  max-width:100%;
+}
