--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -22,3 +22,29 @@
   font-size: 30px;
   font-family: 'M PLUS Rounded 1c';
 }
+@media screen and (max-width:767px){
+  #meeting-top-title{
+    color:blue;
+    font-size: 24px;
+    margin-top: 10%;
+  }
+  #user-top {
+    text-align: center;
+    #one,#two,#three,#four,#five,#six {
+      margin-top: 10px;
+      .top-button {
+        width: 100%;
+        height: 45px;
+        font-size: 18px;
+        font-weight: bold;
+        font-family: 'M PLUS Rounded 1c';
+        
+      }
+    }
+    #two{margin-top: -7%;}
+  }
+  .box_title{
+    max-width: 100%;
+  }
+  .box_srcollbar{margin-bottom: 5%;}
+}
