--- a/app/views/meetings/index2.html.erb
+++ b/app/views/meetings/index2.html.erb
@@ -20,7 +20,7 @@
     <tbody>
       <% @children.each do |child| %>
         <tr>
-          <td><%= child.full_name %></td>
+          <td><i class="fas fa-user-circle"></i><%= child.full_name %></td>
           <% if desired_status(@teacher, child.id) == "返信済み" %>
             <td style="color: red;"><span style="color: green;"><i class="far fa-check-circle"></i></span><%= desired_status(@teacher, child.id) %></td>
           <% else %>
