日付や時間、都合悪い時間などの並びをasc

--- a/app/views/meetings/edit.html.erb
+++ b/app/views/meetings/edit.html.erb
@@ -22,9 +22,9 @@
           <td><%= f.text_field :date, class: 'form-control date-picker select-font' %></td>
           <td>
             <%= f.select :published_at_hour, @hour, {}, class: 'form-control box select-font', style: "width: 45%;" %> :
-            <%= f.select :published_at_minute_1, @minutes, {}, class: 'form-control box select-font', style: "width: 45%;" %>
+            <%= f.select :published_at_minute_1, @minutes1, {}, class: 'form-control box select-font', style: "width: 45%;" %>
           </td>
-          <td><%= f.select :published_at_minute_2, @minutes, {}, class: 'form-control select-font' %></td>
+          <td><%= f.select :published_at_minute_2, @minutes2, {}, class: 'form-control select-font' %></td>
           <td><%= f.select :frame, @frame_list, {}, class: 'form-control select-font' %></td>
           <td><%= f.submit '追加', class: "btn btn-success" %></td>
         </tr>
@@ -45,7 +45,7 @@
       </thead>
 
       <tbody>
-        <% dates.each do |date| %>
+        <% dates.sort.each do |date| %>
           <tr>
             <td rowspan="2">
               <%= date %>
@@ -53,7 +53,7 @@
                 <span style="color: red;"><i class="fas fa-minus-circle"></i></span>
               <% end %>
             </td>
-            <% @meeting_times.each do |meeting_time| %>
+            <% @meeting_times.order(:time).each do |meeting_time| %>
               <% if meeting_time.time.to_date == date %>
                 <td>
                   <%= meeting_time.time.to_s(:time) %>
