--- a/app/views/meetings/new_user.html.erb
+++ b/app/views/meetings/new_user.html.erb
@@ -21,7 +21,7 @@
     </thead>
 
     <tbody>
-      <% dates.each do |date| %>
+      <% dates.sort.each do |date| %>
         <tr>
           <td> <!-- 日付 -->
             <%= date.to_s(:date) %>
@@ -30,7 +30,7 @@
               <div id="yoyaku-count" style="color: red;">希望者数: <%= desired_count(@teacher, date) %></div>
             </div>
           </td>
-          <% @meeting_times.each do |meeting_time| %>
+          <% @meeting_times.order(:time).each do |meeting_time| %>
             <% if meeting_time.time.to_date == date %>
               <td><%= meeting_time.time.to_s(:time) %></td> <!-- 面談時間 -->
             <% end %>
@@ -56,7 +56,7 @@
           </tr>
         </thead>
         <tbody>
-          <% dates.each do |date| %>
+          <% dates.sort.each do |date| %>
             <tr>
               <!-- 日付 -->
               <td><%= date %></td>
