--- a/app/views/teachers/index2.html.erb
+++ b/app/views/teachers/index2.html.erb
@@ -1,6 +1,6 @@
 <div id="meeting-top-title">保護者一覧</div>
 
-<table class="table meeting-table">
+<table class="table meeting-table" id="full_user">
   <thead>
     <tr>
       <td><i class="fas fa-user-circle"></i>名前</td>
