--- a/app/assets/stylesheets/teachers.scss
+++ b/app/assets/stylesheets/teachers.scss
@@ -18,6 +18,13 @@
   }
 }
 
+#teacher_bt{margin-bottom: 1%;height:45px;font-weight:bold;}
+
+/* teacher-top*/
+.box_srcollbar{
+  max-width:100%;
+}
+
 .box_srcollbar {
   overflow:auto;
   width:500px;
@@ -45,19 +52,21 @@
 }
 @media screen and (max-width:767px){
   #teacher-top{
-   
+
     #one,#two,#three,#four,#five{
       margin-top: 0px;
       .top-button {
         width: 100%;
         height: 45px;
-        
+
       }
     }
   }
+  #teacher_bt{margin-bottom: 5%;height:45px;font-weight:bold;}
 }
-#teacher_bt{margin-bottom: 5%;height:45px;font-weight:bold;}
-/* teacher-top*/
-.box_srcollbar{
-  max-width:100%;
+
+/* 保護者一覧ページ*/
+
+#full_user {
+  max-width: 100%;
 }
