--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -12,7 +12,7 @@
       </thead>
 
       <tbody>
-        <% dates.each do |date| %>
+        <% dates.sort.each do |date| %>
           <tr>
             <!-- 日付 -->
             <td rowspan="2" class="bg-info"><%= date.to_s(:date) %></td>
@@ -25,7 +25,7 @@
               <% end %>
             </td>
             <!-- 面談時間 -->
-            <% @meeting_times_all.each do |meeting_time| %>
+            <% @meeting_times_all.order(:time).each do |meeting_time| %>
                 <% if meeting_time.time.to_date == date %>
                   <td class="bg-success"><%= meeting_time.time.to_s(:time) %></td>
                 <% end %>
@@ -44,7 +44,7 @@
                   </td>
                 <% else %>
                   <td>
-                    <%= link_to "#{meeting_time.name}", teacher_schedule_update_path(@teacher, meeting_time_id: meeting_time.id), meeting_time_id: meeting_time.id, method: :patch %>
+                    <%= link_to "#{meeting_time.name}", teacher_schedule_update_path(@teacher, meeting_time_id: meeting_time.id), meeting_time_id: meeting_time.id, method: :patch %><br>
                     <% if meeting_select(@teacher, date, meeting_time).present? %>
                       <%= af.select :name, meeting_select(@teacher, date, meeting_time), include_blank: true, class: "form-control" %>
                     <% end %>
