面談更新時の不具合や日付などの順番整頓,連絡機能のバリデーション関連

--- a/app/assets/stylesheets/meetings.scss
+++ b/app/assets/stylesheets/meetings.scss
@@ -164,3 +164,14 @@ td.ui-datepicker-week-end a.ui-state-highlight{
   font-size: 18px;
   font-family: 'M PLUS Rounded 1c';
 }
+
+/* 面談スケジュール調整ページ */
+
+#meeting-index {
+  width: 12%;
+}
+
+.select-width {
+  width: 90%;
+}
+
