--- a/app/views/teachers/t_message_reply.html.erb
+++ b/app/views/teachers/t_message_reply.html.erb
@@ -2,18 +2,27 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_with(model: @p_message, url: teacher_t_message_reply_send_path(@teacher, id: @p_message.id), local: true) do |f| %>
+    <%= form_with(model: @p_message, url: teacher_t_message_reply_send_path(@teacher, id: @p_message.id), html: {role: 'form', :id => "form_1"}, local: true) do |f| %>
 
       <%= f.label :title, "タイトル", class: "label-signup"%>
       <%= f.text_field :title, class: "form-control", readonly: true %>
 
       <%= f.label :content, "内容", class: "label-signup" %>
-      <%= f.text_area :content, class: "form-control", readonly: true %>
+      <%= f.text_area :content, class: "form-control", readonly: true, style: "height: 100px" %>
 
       <%= f.label :reply, "返信", class: "label-signup" %>
-      <%= f.text_area :reply, class: "form-control" %>
+      <br><span style="color: red">100文字以内で入力してください。</span>
+      <%= f.text_area :reply, class: "form-control validate[required,maxSize[100]]", style: "height: 100px" %>
 
       <%= f.submit "返信", class: "btn btn-primary btn-block btn-signup" %>
     <% end %>
   </div>
 </div>
+
+<script>
+
+  $(function(){
+    jQuery("#form_1").validationEngine();
+  });
+
+</script>
