--- a/app/views/meetings/edit.html.erb
+++ b/app/views/meetings/edit.html.erb
@@ -1,5 +1,5 @@
-<div id="meeting-top-title">
-  <%= image_tag('/icon/time.png',size:"60x60",style:"display:inline") %>
+<div id="meeting-top-title" class="bg-info">
+  <i class="far fa-clock"></i>
   面談日時編集
 </div>
 
