--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -1,4 +1,7 @@
-<div id="meeting-top-title">面談スケジュール調整</div>
+<div id="meeting-top-title" class="text-primary bg-warning">
+  <i class="far fa-calendar-check"></i>
+  面談スケジュール調整
+</div>
 
 <div id=content>
   <%= form_with(url: teacher_schedule_update_path(@teacher), method: :patch, local:true) do |f| %>
@@ -15,9 +18,9 @@
         <% dates.sort.each do |date| %>
           <tr>
             <!-- 日付 -->
-            <td rowspan="2" class="bg-info"><%= date.to_s(:date) %></td>
+            <td rowspan="2" class="bg-info" id="meeting-index"><%= date.to_s(:date) %></td>
             <!-- 希望者 -->
-            <td rowspan="2" class="bg-warning">
+            <td rowspan="2" class="bg-warning" id="meeting-index">
               <% @meetings_desired.each do |meeting| %>
                 <% if meeting.date == date %>
                   <%= Child.find(meeting.child_id).full_name %><br>
@@ -36,20 +39,20 @@
             <% @meeting_times_all.each do |meeting_time| %>
               <% if meeting_time.time.to_date == date %>
                 <%= fields_for "meeting_times[]", meeting_time do |af| %>
-                <% unless meeting_time.name.present? %>
-                  <td>
-                    <% if meeting_select(@teacher, date, meeting_time).present? %>
-                      <%= af.select :name, meeting_select(@teacher, date, meeting_time), include_blank: true, class: "form-control" %>
-                    <% end %>
-                  </td>
-                <% else %>
-                  <td>
-                    <%= link_to "#{meeting_time.name}", teacher_schedule_update_path(@teacher, meeting_time_id: meeting_time.id), meeting_time_id: meeting_time.id, method: :patch %><br>
-                    <% if meeting_select(@teacher, date, meeting_time).present? %>
-                      <%= af.select :name, meeting_select(@teacher, date, meeting_time), include_blank: true, class: "form-control" %>
-                    <% end %>
-                  </td>
-                <% end %>
+                  <% unless meeting_time.name.present? %>
+                    <td id="meeting-index">
+                      <% if meeting_select(@teacher, date, meeting_time).present? %>
+                        <%= af.select :name, meeting_select(@teacher, date, meeting_time), {include_blank: true}, {class: "select-width"} %>
+                      <% end %>
+                    </td>
+                  <% else %>
+                    <td id="meeting-index">
+                      <%= link_to "#{meeting_time.name}", teacher_schedule_update_path(@teacher, meeting_time_id: meeting_time.id), meeting_time_id: meeting_time.id, method: :patch %><br>
+                      <% if meeting_select(@teacher, date, meeting_time).present? %>
+                        <%= af.select :name, meeting_select(@teacher, date, meeting_time), {include_blank: true}, {class: "select-width"} %>
+                      <% end %>
+                    </td>
+                  <% end %>
                 <% end %>
               <% end %>
             <% end %>
