--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -1,5 +1,5 @@
-<div id="meeting-top-title">
-  <%= image_tag('/icon/cl.png',size:"60x60",style:"display:inline") %>
+<div id="meeting-top-title" class="bg-info">
+  <i class="far fa-calendar-alt"></i>
   面談日時登録
 </div>
 
