--- a/app/views/documents/_form.html.erb
+++ b/app/views/documents/_form.html.erb
@@ -39,17 +39,20 @@
       <% end %>
         <label id="document_form_title_label">資料の概要&emsp;<span style="color:#FF4F50">(必須です)</span></label>
         <%= form.text_area :memo, id:"document_memo-forms",class:"form-control fa",placeholder:"\uf304　書類の概要です。",value:@document.memo.present? ? @document.memo : params[:memo]  %>
-      </div><br>  
-    
+      </div><br>
+      
+        
     <label id="document_form_title_label">外部サービス</label>
     <%= form.select :service,service_select,{},class:"form-control",id:"document_select-forms" %><br>
 
-    <! -- 表示式のみ外部リンク必須 -->  
-    <%  if yield(:url) == document_create3_path || (document.item_check? == false) &&  params[:pdf_link].nil?  %>  <!--documentモデル参照-->
-      <div class="alert alert-info alert2" style="margin-top:1%;width:40%;">この書類では正確に入力ください。</div>  
-    <% elsif document.item_check? == false && flashArray.include?("正確に入力ください。") &&  params[:pdf_link].blank? %>  
-       <div class="alert alert-danger alert2" style="margin-top:1%;width:35%;">正確に入力ください。</div>  
-    <% end %>
+    <% if flashArray %>
+       <% if  flashArray.include?("この書類では入力ください。") %>
+         <div class="alert alert-danger alert2">この書類では正確に入力ください。</div>
+       <% elsif flashArray.include?("1正確に入力ください。") %>
+         <div class="alert alert-danger alert2">正確に入力ください。</div>  
+       <% end %>
+      <% end %>
+
     <div class="field">
       <label id="document_form_title_label">外部リンク&emsp;<span style="color:#FF4F50"><%= "(必須です)" if yield(:url) == document_create3_path || (document.item_check? == false) &&  params[:pdf_link].nil?  %></span></label>
       <%= form.text_field :service_url, id:"document_pdf_link-forms",class:"form-control fa",placeholder:"\uf381　書類のURLを入力ください。",value:@document.service_url.present? ? @document.service_url : params[:service_url] %>
