--- a/app/views/meetings/edit.html.erb
+++ b/app/views/meetings/edit.html.erb
@@ -53,7 +53,7 @@
                 <span style="color: red;"><i class="fas fa-minus-circle"></i></span>
               <% end %>
             </td>
-            <% @meeting_times.order(:time).each do |meeting_time| %>
+            <% @meeting_times.each do |meeting_time| %>
               <% if meeting_time.time.to_date == date %>
                 <td>
                   <%= meeting_time.time.to_s(:time) %>
