--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -52,7 +52,7 @@
   </div>
   <div id="five">
     <%= link_to teacher_teacher_index2_path(@teacher), class: "btn btn-info top-button last" do %>
-    <%= image_tag('/icon/pe.png',size:"20x20") %>
+    <i class="fas fa-users" style="color: #000000;"></i>
     保護者一覧
     <% end %>
   </div>
